1. mysql query로 회원 정보 select 2. socket.io readfile 구현

--- a/views/index.jade
+++ b/views/index.jade
@@ -19,8 +19,12 @@ block content
     li #{i} : #{a}
 
 
-  //button(onclick=) Click
-  a(href="/users") USERLIST
+  p
+
+  div
+    a(href="/users") USERLIST
+  div
+    a(href="/readFile") READ FILE
 
   p Edited by #{name}
 
