--- a/views/head.jade
+++ b/views/head.jade
@@ -1,3 +1,5 @@
 head
   title= title
   link(rel='stylesheet', href='/stylesheets/style.css')
+  script(type='text/javascript', src='/javascripts/jquery-3.3.1.min.js')
+
