3. socket.io로 Chat 모듈 구현 - socket.io 이용해 채팅방 입장 구현

--- a/views/index.jade
+++ b/views/index.jade
@@ -3,11 +3,11 @@ extends layout
 block content
   h1= title
 
-  form(action='/enterChat', method='POST')
+  form(action='/chatList', method='POST')
     label(for='username') Input Your Nickname
     br
     br
-    input(type='text', id='username', name='username')
+    input(type='text', id='username', name='username', value='sjjung')
     input(type='submit', value='Enter!')
 
   script(type='text/javascript').
