--- a/views/head.jade
+++ b/views/head.jade
@@ -2,4 +2,5 @@ head
   title= title
   link(rel='stylesheet', href='/stylesheets/style.css')
   script(type='text/javascript', src='/javascripts/jquery-3.3.1.min.js')
+  script(type='text/javascript', src='/socket.io/socket.io.js')
 
