--- a/views/chatList.jade
+++ b/views/chatList.jade
@@ -6,7 +6,7 @@ block content
   - if (params.isSuccess)
     h2 GROUP CHAT ROOM LIST
 
-    form(action='/chatRoom', method='post')
+    form(action='/makeRoom', method='post')
       each group, i in params.groupList
         li #{group.group_name}
           button(type='submit', name='group', value='#{JSON.stringify(group)}') ENTER
@@ -16,7 +16,7 @@ block content
 
     script(type='text/javascript').
       $(document).ready(function() {
-        console.log("form(action='/chatRoom', method='post')")
+        console.log("form(action='/makeRoom', method='post')")
         $('form').on('submit', function (e) {
           return true;
         });
