SM-43 [MOVE] 사용자 현재 위치 좌표 push - 아이디로 phone 검색 - 쓸모없는 console.log 제거

--- a/views/login.jade
+++ b/views/login.jade
@@ -9,11 +9,9 @@ block content
   script(type='text/javascript').
     $(document).ready(function () {
 
-      console.log("#{user_id}")
       var room = io.connect("/")
-      //var room = io.connect('/login')
 
-      room.emit('sendUserId', { userId: "#{user_id}", phone: "#{phone}"})
+      room.emit('sendUserId', { userId: "#{user_id}" })
       room.on('saveSocket', function (data) {
         $('#phone').val(data.phone);
 
